# GPUprobe

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  compile_commands.json
src/: gpuprobe_memleak.rs  main.rs
src/bpf/: .gitignore  Makefile  compile_commands.json  gpuprobe.bpf.c  gpuprobe.skel.h  gpuprobe.skel.rs  vmlinux.h
src/gpuprobe/: collector.rs  gpuprobe_bandwidth_util.rs  gpuprobe_cudatrace.rs  gpuprobe_memleak.rs  metrics.rs  mod.rs  uprobe_data.rs
