[package]
name = "gpu_probe"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[build-dependencies]
libbpf-cargo = "0.24"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
libbpf-rs = "0.24"
libc = "0.2"
prometheus-client = "0.22.3"
axum = "0.7.7"
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
chrono = "0.4.38"
